force-app/main/default/objects/DESKSCMT__migration_settings__c/DESKSCMT__migration_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Desk Migration Settings</label>
</CustomObject>