force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Article_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Article_Per_Page__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Sets the per page size for fetching articles from Desk. Only change this if you are getting Heap Size errors while fetching articles. Should be less than 50 and greater than 0.</description>
    <inlineHelpText>Sets the per page size for fetching articles from Desk. Should be less than 50 and greater than 0.</inlineHelpText>
    <label>Article Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>