force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Fetch_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Fetch_Batch_Size__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Sets the batch size for fetching objects from Desk. Should be less than 3 and greater than 0.</description>
    <inlineHelpText>Sets the batch size for fetching objects from Desk. Should be less than 3 and greater than 0.</inlineHelpText>
    <label>Fetch Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>