force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Insert_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Insert_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Sets the batch size for inserting intermediate records into actual records. Adjust if hitting CPU timeout errors in your Apex Jobs. Should be greater than 0. Careful increasing over 200.</description>
    <inlineHelpText>Sets the batch size for inserting intermediate records into actual records. Adjust if hitting CPU timeout errors in your Apex Jobs. Should be greater than 0. Careful increasing over 200.</inlineHelpText>
    <label>Insert Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>