force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Interactions_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Interactions_Per_Page__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Sets the per page size for fetching interactions from Desk. Only change this if you are getting Heap Size errors while fetching interactions. Should be between 100 and 0.</description>
    <inlineHelpText>Sets the per page size for fetching interactions from Desk. Should be between 100 and 0.</inlineHelpText>
    <label>Interactions Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>