force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Limit_Interactions_By_Case_Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Limit_Interactions_By_Case_Date_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to disable filtering interactions by date.</description>
    <inlineHelpText>Set to checked to limit interactions by filter.  Set to unchecked to bring in all interactions.</inlineHelpText>
    <label>Limit Interactions By Case Date Filter</label>
    <type>Checkbox</type>
</CustomField>