force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Max_ID_Case_Fetch__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Max_ID_Case_Fetch__c</fullName>
    <description>Sets the max_id for case fetch</description>
    <inlineHelpText>Sets the max_id for case fetch</inlineHelpText>
    <label>Case Fetch - max_id (default null)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>