force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Max_List_Values__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Max_List_Values__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Sets the max list values for picklists that can be mapped.</description>
    <inlineHelpText>Sets the max list values for picklists that can be mapped.</inlineHelpText>
    <label>Max List Values</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>