force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Migration_Monitor_Delay_time__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Migration_Monitor_Delay_time__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Sets how often the Migration Monitor runs.</description>
    <inlineHelpText>Sets how often the Migration Monitor runs.</inlineHelpText>
    <label>Migration Monitor Delay Time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>