force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Parallel__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Parallel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you want to run the batches in parallel.</description>
    <inlineHelpText>Check this box if you want to run the batches in parallel.</inlineHelpText>
    <label>Parallel</label>
    <type>Checkbox</type>
</CustomField>