force-app/main/default/objects/DESKSCMT__migration_settings__c/fields/DESKSCMT__Send_Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Send_Notification_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck this box if you hit the email sending limit for your org.</description>
    <inlineHelpText>Uncheck this box if you hit the email sending limit for your org.</inlineHelpText>
    <label>Send Notification Emails</label>
    <type>Checkbox</type>
</CustomField>